tests/compile_fail/args_not_impl_default.stderr
error[E0277]: the trait bound `TestArgs: Default` is not satisfied
 --> tests/compile_fail/args_not_impl_default.rs:6:20
  |
6 | #[arbitrary(args = TestArgs)]
  |                    ^^^^^^^^ the trait `Default` is not implemented for `TestArgs`
  |
note: required by a bound in `proptest::arbitrary::Arbitrary::Parameters`
 --> $CARGO/proptest-1.5.0/src/arbitrary/traits.rs
  |
  |     type Parameters: Default;
  |                      ^^^^^^^ required by this bound in `Arbitrary::Parameters`
help: consider annotating `TestArgs` with `#[derive(Default)]`
  |
2  + #[derive(Default)]
3  | struct TestArgs {
   |
